ACP clean up before going public